# SUMMARIZE-THESE

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
static/: returnBanner.css  script.js  style.css  testCases.js
templates/: index.html
